Minor updates, added exercism

--- a/cv.html
+++ b/cv.html
@@ -24,13 +24,18 @@
           <tr>
             <td>Address</td>
             <td>
-              <address>Torsbergåsen 11<br/>3803 Bø<br/>Norway</address></td>
+              <address>Torsbergåsen 11<br/>3803 Bø<br/>Norway</address>
+            </td>
           </tr>
         </table>
         <table>
           <tr>
             <td>GitHub</td>
             <td><a href="https://github.com/bnordbo">https://github.com/bnordbo</a></td>
+          </tr>
+          <tr>
+            <td>Exercism</td>
+            <td><a href="http://exercism.io/bnordbo">http://exercism.io/bnordbo</a></td>
           </tr>
           <tr>
             <td>LinkedIn</td>
@@ -58,22 +63,22 @@
 
     <section>
       <p>
-        Devops engineer in the Software Telco team in Telenor Digital,
-        Telenor Groups's entrepreneurship division. I am responsible
-        for setting up managed AWS environments for production,
-        staging and test, along with CI/CD pipelines.
+        Software engineer in the Software Telco team in Telenor
+        Digital, Telenor Groups's entrepreneurship division. Besides
+        regular development tasks, I have been involved in
+        infrastructure as code and CI/CD automation.
       </p>
 
       <ul>
         <li>
-          Encoded infrastructure as reusable projects using Terraform.
-          This allows keeping the environment setup checked into
-          version control, and to easily recreate entire environments.
+          Encoded all our AWS infrastructure as reusable projects
+          using Terraform.  This allows us to do verson control of our
+          infrastructure, and to easily create entire environments.
         </li>
         <li>
           Built a CI/CD pipeline using Jenkins and custom release
           tooling written in Python, allowing automatic deployment and
-          test of container images to test and staging.
+          test of container images.
         </li>
         <li>
           Expanded the mobile message manager with support for
@@ -85,9 +90,8 @@
           deploying a service stack that smoke tests are run against.
         </li>
         <li>
-          Described the current architecture in the prototype setup,
-          identified shortcomings and proposed a revised architecture
-          for the migration to a production capable system.
+          Initiated migration from our fleet based distributed
+          scheduler to Kubernetes/Calico.
         </li>
       </ul>
     </section>
@@ -198,7 +202,7 @@
 
     <section>
       <p>
-        Devops engineer in Netfonds, the first online stockbroker in
+        Programmer in Netfonds, the first online stockbroker in
         Norway.  I worked on the combined development/operations team
         counting five engineers, became responsible for several
         orphaned operations related tasks, besides programming
@@ -453,10 +457,10 @@
         </li>
         <li>
           <b>TCP/IP</b> has always been very close to my work, be it
-          when developing network management systems for large IP
-          networks, or developing REST-like APIs for web services.
-          Besides the fundamentals, I am familiar with protocols such
-          as DNS, HTTP, SMTP, IMAP4 and SIP.
+          as a developer of network management systems for large IP
+          networks, or cloud network architecture.  Besides the
+          fundamentals, I am familiar with protocols such as DNS,
+          HTTP, SMTP, IMAP4 and GTP.
         </li>
         <li>
           <b>Cloud services</b> is something I have been increasingly
@@ -465,10 +469,9 @@
           environments as code using Terraform.
         </li>
         <li>
-          <b>Containerization</b> is a new topic for me, but lately
-          I have been highly involved in deploying containers on
-          CoreOS/fleet, and I have been looking into more advanced
-          solutions such as Kubernetes and Nomad.
+          <b>Containerization</b> is a recent topic for me, and lately
+          I have been highly involved in operating containers on
+          CoreOS/fleet, and the migration to Kubernetes/Calico.
         </li>
       </ul>
     </section>
@@ -481,19 +484,17 @@
           I am fond of cycling, both the athletic and mechanical
           aspects, as well as collecting funny looking bicycles and
           volunteering as a bicycle mechanic at an annual even to
-          promote cycling.
+          promote cycling. I also run and practice ju jitsu.
         </li>
         <li>
-          Since we got a garden, I have been enjoying tending it and
-          growing our own vegetables, and I am currently building a
-          greenhouse.
+          Being the owner of a garden and greenhouse, I enjoy tending
+          it and growing my own vegetables.
         </li>
         <li>
-          I have always enjoyed programming, in particular the
-          functional style, and frequently find myself tinkering with
-          code on my spare time.  I also try to pass on this passion
-          to the next generation by volunteering at our local Code
-          Club.
+          I enjoy programming, in particular the functional style, and
+          frequently find myself tinkering with code in my spare time.
+          I also try to pass on this passion to the next generation by
+          volunteering at our local Code Club.
         </li>
         <li>
           I like yeast, consequently I both brew my own beer and bake
